docs: added plugin to allow variables in page content

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,6 +154,7 @@ jobs:
       - name: Install required packages
         run: |
           pip3 install mkdocs-material
+          pip3 install mkdocs-macros-plugin
               
       - name: Generate docs and publish to GitHub Pages
         run: mkdocs gh-deploy --force
