--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,13 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
 
+plugins:
+  - search     
+  - macros
+
+extra:
+  repo:
+    full_url: https://github.com/namecheap/ilc/blob/master
 
 docs_dir: 'docs'
 site_dir: 'output'
