--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,40 +11,47 @@ theme:
     accent: deep purple
   features:
     - navigation.sections
+    - navigation.tabs
     - navigation.top
 
 repo_url: https://github.com/namecheap/ilc
 repo_name: namecheap/ilc
 
 nav:
-  - Home: index.md
-  - Installation: installation_guide.md
-  - Micro-frontend Types: microfrontend-types.md
-  - App deployments with ILC: stepbystep/index.md
-  - ILC to App interface: ilc_app_interface.md
-  - ILC Registry: registry.md
-  - Animation during reroute: animation_during_reroute.md
-  - Global error handling: global_errors_handling.md
-  - Internationalization: i18n.md
-  - Develop at Production: develop_at_production.md
-  - Compatibility with legacy UMD bundles: umd_bundles_compatibility.md
-  - Global API: global_api.md
-  - ILC transition hooks: transition_hooks.md
-  - Multi-domains: multi-domains.md
-  - Advanced features:
-    - Parcels: parcels.md
-    - Plugins: https://github.com/namecheap/ilc-plugins-sdk
-    - App Wrappers: app_wrappers.md
-  - How-to Guides:
-      - App deploy with React + ILC:
-        - Lesson 1: stepbystep/react/lesson1.md
-        - Lesson 2: stepbystep/react/lesson2.md
-        - Lesson 3: stepbystep/react/lesson3.md
-        - Lesson 4: stepbystep/react/lesson4.md
-  - External resources:
-    - Demo applications used in quick start: https://github.com/namecheap/ilc-demo-apps
-    - SDK for ILC plugins development: https://github.com/namecheap/ilc-plugins-sdk
-    - Public Path Problem: https://namecheap.github.io/ilc-sdk/pages/Pages/public_path.html
+  - Home:
+    - Introduction: index.md
+    - Legal:
+      - License: https://github.com/namecheap/ilc/blob/master/LICENSE.txt
+      - Notice: https://github.com/namecheap/ilc/blob/master/NOTICE.md
+  - Demo: http://demo.microfrontends.online/
+  - Docs:
+    - Installation: installation_guide.md
+    - Micro-frontend Types: microfrontend-types.md
+    - App deployments with ILC: stepbystep/index.md
+    - ILC to App interface: ilc_app_interface.md
+    - ILC Registry: registry.md
+    - Animation during reroute: animation_during_reroute.md
+    - Global error handling: global_errors_handling.md
+    - Internationalization: i18n.md
+    - Develop at Production: develop_at_production.md
+    - Compatibility with legacy UMD bundles: umd_bundles_compatibility.md
+    - Global API: global_api.md
+    - ILC transition hooks: transition_hooks.md
+    - Multi-domains: multi-domains.md
+    - Advanced features:
+      - Parcels: parcels.md
+      - Plugins: https://github.com/namecheap/ilc-plugins-sdk
+      - App Wrappers: app_wrappers.md
+    - How-to Guides:
+        - App deploy with React + ILC:
+          - Lesson 1: stepbystep/react/lesson1.md
+          - Lesson 2: stepbystep/react/lesson2.md
+          - Lesson 3: stepbystep/react/lesson3.md
+          - Lesson 4: stepbystep/react/lesson4.md
+    - External resources:
+      - Demo applications used in quick start: https://github.com/namecheap/ilc-demo-apps
+      - SDK for ILC plugins development: https://github.com/namecheap/ilc-plugins-sdk
+      - Public Path Problem: https://namecheap.github.io/ilc-sdk/pages/Pages/public_path.html
 
 markdown_extensions:
   - attr_list
