--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,9 @@ site_author: Namecheap, Inc
 
 theme:
   name: material
+  favicon: brand/vector/isolated-monochrome-black.svg
+  logo: brand/vector/isolated-monochrome-white.svg
   icon:
-    logo: material/scissors-cutting
     repo: fontawesome/brands/github
   palette:
     primary: indigo
@@ -19,55 +20,57 @@ repo_name: namecheap/ilc
 
 nav:
   - Home:
-    - Introduction: index.md
-    - Legal:
-      - License: https://github.com/namecheap/ilc/blob/master/LICENSE.txt
-      - Notice: https://github.com/namecheap/ilc/blob/master/NOTICE.md
-  - Demo: http://demo.microfrontends.online/
-  - Docs:
-    - Installation: installation_guide.md
-    - Micro-frontend Types: microfrontend-types.md
-    - App deployments with ILC: stepbystep/index.md
-    - ILC to App interface: ilc_app_interface.md
-    - ILC Registry: registry.md
-    - Animation during reroute: animation_during_reroute.md
-    - Global error handling: global_errors_handling.md
-    - Internationalization: i18n.md
-    - Develop at Production: develop_at_production.md
-    - Compatibility with legacy UMD bundles: umd_bundles_compatibility.md
-    - Global API: global_api.md
-    - ILC transition hooks: transition_hooks.md
-    - Multi-domains: multi-domains.md
+    - Home: index.md
+    - Contributing: CONTRIBUTING.md
+  - Demo website: http://demo.microfrontends.online/
+  - Documentation:
+    - Installation: docs/installation_guide.md
+    - Micro-frontend Types: docs/microfrontend-types.md
+    - App deployments with ILC: docs/stepbystep/index.md
+    - ILC to App interface: docs/ilc_app_interface.md
+    - ILC Registry: docs/registry.md
+    - Animation during reroute: docs/animation_during_reroute.md
+    - Global error handling: docs/global_errors_handling.md
+    - Internationalization: docs/i18n.md
+    - Develop at Production: docs/develop_at_production.md
+    - Compatibility with legacy UMD bundles: docs/umd_bundles_compatibility.md
+    - Global API: docs/global_api.md
+    - ILC transition hooks: docs/transition_hooks.md
+    - Multi-domains: docs/multi-domains.md
     - Advanced features:
-      - Parcels: parcels.md
+      - Parcels: docs/parcels.md
       - Plugins: https://github.com/namecheap/ilc-plugins-sdk
-      - App Wrappers: app_wrappers.md
+      - App Wrappers: docs/app_wrappers.md
     - How-to Guides:
         - App deploy with React + ILC:
-          - Lesson 1: stepbystep/react/lesson1.md
-          - Lesson 2: stepbystep/react/lesson2.md
-          - Lesson 3: stepbystep/react/lesson3.md
-          - Lesson 4: stepbystep/react/lesson4.md
+          - Lesson 1: docs/stepbystep/react/lesson1.md
+          - Lesson 2: docs/stepbystep/react/lesson2.md
+          - Lesson 3: docs/stepbystep/react/lesson3.md
+          - Lesson 4: docs/stepbystep/react/lesson4.md
     - External resources:
       - Demo applications used in quick start: https://github.com/namecheap/ilc-demo-apps
       - SDK for ILC plugins development: https://github.com/namecheap/ilc-plugins-sdk
       - Public Path Problem: https://namecheap.github.io/ilc-sdk/pages/Pages/public_path.html
+  - Legal:
+    - Notice: NOTICE.md
+    - License: LICENSE.md
 
 markdown_extensions:
   - attr_list
   - toc:
       permalink: ⚓︎
+  - pymdownx.magiclink
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
 
 plugins:
-  - search     
+  - search
   - macros
 
 extra:
   repo:
     full_url: https://github.com/namecheap/ilc/blob/master
 
-docs_dir: 'docs'
-site_dir: 'output'
+docs_dir: '.mkdocs'
+site_dir: 'mkdocs_dist'
