Feature: docs deployment to GitHub pages via Actions (#327)
* docs: added static site generator for the documentation. Revised docs pages to work properly with the SSG

* docs: added GitHub Actions flow to deploy documentation to GitHub Pages

* docs: reverted deleted pages with links to docs from new locations

* docs: improved Actions flow: integrated docs deployment into the main CI flow. Removed separate docs deployment workflow. Set dependencies for docs deployment

* docs: updated prerequisites for the documentation to be generated by ci

* docs: switched from docker to pip installation for documentation generation workflow

* docs: added plugin to allow variables in page content

* docs: changed hardcoded links to variables in the installation guide. Made links to source files as external. Added corresponding icons to external links in the installation guide

* docs: added ignore rule for variable macro for several false-positive pages

* docs: modified navigation structure. Added navigation tabs. Added legal section.

* chore: reduced code duplication

* chore: reduced code duplication

* docs: modified ci step for documentation to use the local Dockerfile with build step only for master branch

Co-authored-by: Vladlen Fedosov <vladlen.f@namecheap.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,3 +143,18 @@ jobs:
               docker tag namecheap/ilc_tmp:${GITHUB_SHA:0:7} namecheap/ilc:$i
               docker push namecheap/ilc:$i
           done
+
+  build_docs:
+    needs: [push_images]
+    name: Build documentation
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build the Docker image
+        run: |
+          docker build -t ilc-mkdocs - < ./.mkdocs/Dockerfile
+              
+      - name: Generate docs and publish to GitHub Pages
+        run: docker run --rm -v ${PWD}:/docs ilc-mkdocs gh-deploy --force
