docs: test aggregation 5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,8 +156,8 @@ jobs:
         uses: andstor/copycat-action@v3
         with:
           personal_token: ${{ secrets.GITHUB_TOKEN }}
-          src_path: ./.mkdocs
-          dst_path: ./docs/ilc/
+          src_path: /.mkdocs
+          dst_path: /docs/ilc/
           clean: true
           dst_owner: bandantonio
           dst_repo_name: documentation
