--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,15 +153,14 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Copy
-        uses: andstor/copycat-action@v3
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          src_path: /.mkdocs
-          dst_path: /docs/ilc/
-          clean: true
-          dst_owner: bandantonio
-          dst_repo_name: documentation
-
+          source-directory: '/.mkdocs'
+          target-directory: '/docs/ilc'
+          destination-github-username: 'bandantonio'
+          destination-repository-name: 'documentation'
 
       - name: Build the Docker image
         run: |
