--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,7 @@ jobs:
           target-directory: '/docs/ilc'
           destination-github-username: 'bandantonio'
           destination-repository-name: 'documentation'
+          target-branch: master
 
       - name: Build the Docker image
         run: |
