--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,7 +157,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
         with:
-          source-directory: '/.mkdocs'
+          source-directory: '.mkdocs'
           target-directory: '/docs/ilc'
           destination-github-username: 'bandantonio'
           destination-repository-name: 'documentation'
