--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,6 +161,8 @@ jobs:
           target-directory: './docs/ilc'
           destination-github-username: 'bandantonio'
           destination-repository-name: 'documentation'
+          user-email: zolotuhin87@gmail.com
+          commit-message: See ORIGIN_COMMIT from $GITHUB_REF
           target-branch: master
 
       - name: Build the Docker image
