--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,16 +153,14 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Copy
-        uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.DOCS_AGGREGATION }}
+        uses: andstor/copycat-action@v3
         with:
-          source-directory: .mkdocs
-          target-directory: docs/ilc
-          destination-github-username: bandantonio
-          destination-repository-name: documentation
-          user-email: zolotuhin87@gmail.com
-          target-branch: master
+          personal_token: ${{ secrets.DOCS_AGGREGATION }}
+          src_path: /.mkdocs
+          dst_path: /docs/ilc/
+          clean: true
+          dst_owner: bandantonio
+          dst_repo_name: documentation
 
       - name: Build the Docker image
         run: |
