docs: test aggregation 19

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,7 +153,17 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Copy
-        uses: andstor/copycat-action@v3
+        uses: cpina/github-action-push-to-another-repository@main
+          env:
+            API_TOKEN_GITHUB: ${{ secrets.DOCS_AGGREGATION }}
+          with:
+            source-directory: /.mkdocs
+            target-directory: /docs/ilc
+            destination-github-username: bandantonio
+            destination-repository-name: documentation
+            user-email: zolotuhin87@gmail.com
+            commit-message: Auto merge from $REPOSITORY_URL
+            target-branch: master
         with:
           personal_token: ${{ secrets.DOCS_AGGREGATION }}
           src_path: /.mkdocs
