--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,8 +157,8 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.DOCS_AGGREGATION }}
         with:
-          source-directory: /.mkdocs
-          target-directory: /docs/ilc
+          source-directory: .mkdocs
+          target-directory: docs/ilc
           destination-github-username: bandantonio
           destination-repository-name: documentation
           user-email: zolotuhin87@gmail.com
