--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,7 +153,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Copy
-        uses: dmnemec/copy_file_to_another_repo_action@main
+        uses: TomoeMami/copy_file_to_another_repo_action@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.DOCS_AGGREGATION }}
         with:
@@ -161,9 +161,10 @@ jobs:
           destination_repo: 'bandantonio/documentation'
           destination_folder: docs/ilc
           user_email: zolotuhin87@gmail.com
-          user_name: bandantonio
-          commit_message: Auto merge from $REPOSITORY_URL
+          user_name: Antonio
+          commit_message: 'AUTO: merge from $REPOSITORY_URL'
           destination_branch: master
+          git_server: github.com
 
       - name: Build the Docker image
         run: |
