docs: test aggregation 30

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,9 +162,8 @@ jobs:
           destination_folder: docs/ilc/
           user_email: zolotuhin87@gmail.com
           user_name: Antonio
-          commit_message: 'AUTO: merge from $REPOSITORY_URL'
+          commit_message: AUTO merge
           destination_branch: master
-          destination_branch_create: test
           git_server: github.com
 
       - name: Build the Docker image
