--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
       - name: Copy
         run: |
           mkdir temp-for-push
-          git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
+          git clone -b master https://${{ secrets.GITHUB_TOKEN }}@github.com/bandantonio/documentation.git temp-for-push/documentation
           cp -R .mkdocs temp-for-push/documentation/docs/ilc
           cp mkdocs.yml temp-for-push/documentation/docs/ilc
           cd temp-for-push
