--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
       - name: Copy
         run: |
           mkdir temp-for-push
-          git clone -b master https://${{ secrets.GITHUB_TOKEN }}@github.com/bandantonio/documentation.git temp-for-push/documentation
+          git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
           ls -la
           cp -R .mkdocs temp-for-push/documentation/docs/ilc
           cp mkdocs.yml temp-for-push/documentation/docs/ilc
@@ -163,6 +163,10 @@ jobs:
           echo "--temp-for-push--"
           ls -la
           git status
+          git config user.name "Antonio"
+          git config user.email "zolotuhin87@gmail.com"
+          git add .
+          git commit -m "AUTO merge"
         # uses: TomoeMami/copy_file_to_another_repo_action@main
         # env:
         #   API_TOKEN_GITHUB: ${{ secrets.DOCS_AGGREGATION }}
