docs: test aggregation 36

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,6 +167,7 @@ jobs:
           git config user.email "zolotuhin87@gmail.com"
           git add .
           git commit -m "AUTO merge"
+          git remote -v
         # uses: TomoeMami/copy_file_to_another_repo_action@main
         # env:
         #   API_TOKEN_GITHUB: ${{ secrets.DOCS_AGGREGATION }}
