--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,12 +154,12 @@ jobs:
       
       - name: Copy
         run: |
-          mkdir temp-for-push
-          git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
+          mkdir /temp-for-push
+          git clone -b master https://github.com/bandantonio/documentation.git /temp-for-push/documentation
           ls -la
-          cp -R .mkdocs temp-for-push/documentation/docs/ilc
-          cp mkdocs.yml temp-for-push/documentation/docs/ilc
-          cd temp-for-push/documentation
+          cp -R .mkdocs /temp-for-push/documentation/docs/ilc
+          cp mkdocs.yml /temp-for-push/documentation/docs/ilc
+          cd /temp-for-push/documentation
           echo "--documentation--"
           ls -la
           git status
