--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,20 +154,13 @@ jobs:
       
       - name: Copy
         run: |
-          mkdir ../temp-for-push
-          git clone -b master https://github.com/bandantonio/documentation.git ../temp-for-push/documentation
+          cd ..
+          mkdir temp-for-push
+          git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
           ls -a
-          cp -LR .mkdocs ../temp-for-push/documentation/docs/ilc
-          cp mkdocs.yml ../temp-for-push/documentation/docs/ilc
-          cd ../temp-for-push/documentation
-          echo "--documentation--"
-          ls -a
+          echo "test file" >> readme.md
+          cat readme.md
           git status
-          git config user.name "Antonio"
-          git config user.email "zolotuhin87@gmail.com"
-          git add .
-          git status
-          git remote -v
           
         # uses: TomoeMami/copy_file_to_another_repo_action@main
         # env:
