--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,10 +156,12 @@ jobs:
         run: |
           cd ..
           mkdir temp-for-push
+          ls -a
           git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
-          cp -LR ilc/.mkdocs temp-for-push/documentation/docs/ilc
-          cp ilc/mkdocs.yml temp-for-push/documentation/docs/ilc
-          cd temp-for-push/documentation
+          cd ./ilc
+          cp -LR .mkdocs ../temp-for-push/documentation/docs/ilc
+          cp mkdocs.yml ../temp-for-push/documentation/docs/ilc
+          cd ../temp-for-push/documentation
           git status
           git config user.name "Antonio"
           git config user.email "zolotuhin87@gmail.com"
