--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,14 +157,11 @@ jobs:
           cd ..
           mkdir temp-for-push
           git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
-          cd ./ilc
-          echo "--ILC--"
           ls -a
-          cp -LR .mkdocs ../temp-for-push/documentation/docs/ilc
-          cp mkdocs.yml ../temp-for-push/documentation/docs/ilc
-          cd ../temp-for-push/documentation
-          echo "--DOCS--"
-          ls -a
+          ${pwd}
+          cp -LR ilc/.mkdocs temp-for-push/documentation/docs/ilc
+          cp ilc/mkdocs.yml temp-for-push/documentation/docs/ilc
+          cd temp-for-push/documentation
           echo "Test" >> test.md
           git status
           git config user.name "Antonio"
