docs: test aggregation 47

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,18 +157,16 @@ jobs:
           cd ..
           mkdir temp-for-push
           git clone -b master https://github.com/bandantonio/documentation.git temp-for-push/documentation
-          ls -a
-          ${pwd}
           cp -LR ilc/.mkdocs temp-for-push/documentation/docs/ilc
           cp ilc/mkdocs.yml temp-for-push/documentation/docs/ilc
           cd temp-for-push/documentation
-          echo "Test" >> test.md
-          git status
           git config user.name "Antonio"
           git config user.email "zolotuhin87@gmail.com"
+          git status
           git add .
           git status
-          git remote -v
+          git commit -m "AUTO: update from ilc repo"
+          git push origin master
           
         # uses: TomoeMami/copy_file_to_another_repo_action@main
         # env:
