fix: use certain python3 version

--- a/ilc/Dockerfile
+++ b/ilc/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14-alpine
 
-RUN apk update && apk add --no-cache bash git openssh python make g++ findutils
+RUN apk update && apk add --no-cache bash git openssh python3 make g++ findutils
 
 # Legacy infrastructure support
 RUN npm install -g stdout-mq@^2.4.0
