--- a/e2e/package.json
+++ b/e2e/package.json
@@ -8,20 +8,22 @@
         "start": "codeceptjs run",
         "start:verbose": "cross-env TEST_ENV=verbose npm start -- --verbose",
         "start:verbose:ui": "cross-env SHOW_UI=true npm run start:verbose",
+        "start:gui": "codecept-ui",
         "generate-typings": "codeceptjs def -o ./typings"
     },
     "author": "",
     "license": "UNLICENSED",
     "dependencies": {
-        "@codeceptjs/mock-request": "^0.3.0",
-        "@pollyjs/adapter-puppeteer": "^4.2.1",
-        "@pollyjs/core": "^4.2.1",
-        "codeceptjs": "^2.6.11",
+        "@codeceptjs/mock-request": "^0.3.1",
+        "@codeceptjs/ui": "^0.4.6",
+        "@pollyjs/adapter-puppeteer": "^6.0.1",
+        "@pollyjs/core": "^6.0.1",
+        "codeceptjs": "^3.2.2",
         "cross-env": "^7.0.2",
         "execa": "^4.0.1",
-        "puppeteer": "^3.0.4",
-        "ts-node": "^8.10.1",
-        "typescript": "^3.9.2",
+        "puppeteer": "^12.0.1",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.2",
         "wait-on": "^5.2.1"
     }
 }
