fix: removal of the unreliable test
https://stackoverflow.com/a/67604750

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
         run: npm run build
 
       - name: Run E2E tests
-        run: cd e2e && npm run start:verbose
+        run: cd e2e && npm run start
 
       - uses: actions/upload-artifact@v2
         if: failure()
