--- a/e2e/package.json
+++ b/e2e/package.json
@@ -19,6 +19,7 @@
         "@pollyjs/adapter-puppeteer": "^6.0.1",
         "@pollyjs/core": "^6.0.1",
         "codeceptjs": "^3.2.2",
+        "codeceptjs-chai": "^2.3.2",
         "cross-env": "^7.0.2",
         "execa": "^4.0.1",
         "mocha-multi": "^1.1.5",
