test: add karma-parallel to run all tests separatelly

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -64,6 +64,7 @@
     "karma-coverage": "^2.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-parallel": "^0.3.1",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^4.0.2",
