--- a/ilc/package.json
+++ b/ilc/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^6.0.3",
     "debug": "^4.3.1",
     "deepmerge": "4.2.2",
+    "eventemitter3": "^4.0.7",
     "fast-glob": "^3.2.4",
     "fastify": "^2.15.2",
     "ilc-plugins-sdk": "^1.3.2",
