--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,9 @@ nav:
     - Global API: docs/global_api.md
     - ILC transition hooks: docs/transition_hooks.md
     - Multi-domains: docs/multi-domains.md
+    - Routing:
+      - Route configuration: docs/routing/route_configuration_options.md
+      - Match & cascade merge: docs/routing/route_match_patterns.md
     - Advanced features:
       - Parcels: docs/parcels.md
       - Plugins: https://github.com/namecheap/ilc-plugins-sdk
