--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,6 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Inspect builder
-      run: |
-        echo "Name:      ${{ steps.buildx.outputs.name }}"
-        echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
-        echo "Status:    ${{ steps.buildx.outputs.status }}"
-        echo "Flags:     ${{ steps.buildx.outputs.flags }}"
-        echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-
     - name: Docker ilc auth
       run: echo "${{ secrets.DOCKER_HUB_TOKEN_NC }}" | docker login --username namecheaprnd --password-stdin
 
@@ -42,6 +34,8 @@ jobs:
         context: "{{defaultContext}}:ilc"
         platforms: linux/amd64,linux/arm64
         push: true
+        cache-from: |
+          namecheap/ilc:latest
         tags: namecheap/ilc_tmp:${{ env.SHA }}
 
     - name: Run sever side tests
@@ -85,14 +79,6 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Inspect builder
-        run: |
-          echo "Name:      ${{ steps.buildx.outputs.name }}"
-          echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
-          echo "Status:    ${{ steps.buildx.outputs.status }}"
-          echo "Flags:     ${{ steps.buildx.outputs.flags }}"
-          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-
       - name: Docker registry auth
         run: echo "${{ secrets.DOCKER_HUB_TOKEN_NC }}" | docker login --username namecheaprnd --password-stdin
 
@@ -102,6 +88,8 @@ jobs:
           context: "{{defaultContext}}:registry"
           platforms: linux/amd64,linux/arm64
           push: true
+          cache-from: |
+            namecheap/ilc_registry:latest
           tags: namecheap/ilc_tmp:reg_${{ env.SHA }}
 
       - name: Run tests
@@ -163,7 +151,7 @@ jobs:
 
       - name: Install regctl
         run: |
-          curl -L https://github.com/regclient/regclient/releases/v0.3.10/download/regctl-linux-amd64 > ./regctl
+          curl -L https://github.com/regclient/regclient/releases/download/v0.3.10/regctl-linux-amd64 > ./regctl
           chmod 755 ./regctl
 
       - name: Push images
