docs: routing docs review. Stage 1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ nav:
     - Multi-domains: docs/multi-domains.md
     - Routing:
       - Route configuration: docs/routing/route_configuration_options.md
-      - Match & cascade merge: docs/routing/route_match_patterns.md
+      - Route matching patterns: docs/routing/route_matching_patterns.md
     - Advanced features:
       - Parcels: docs/parcels.md
       - Plugins: https://github.com/namecheap/ilc-plugins-sdk
@@ -59,13 +59,18 @@ nav:
     - License: LICENSE.md
 
 markdown_extensions:
+  - admonition
   - attr_list
   - toc:
       permalink: ⚓︎
+  - pymdownx.details
   - pymdownx.magiclink
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
 
 plugins:
   - search
@@ -74,6 +79,9 @@ plugins:
 extra:
   repo:
     full_url: https://github.com/namecheap/ilc/blob/master
+
+extra_css:
+  - docs/assets/styles/styles.css
 
 docs_dir: '.mkdocs'
 site_dir: 'mkdocs_dist'
