--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /codebase
 COPY package-lock.json package.json /codebase/
 RUN npm ci --no-package-lock --ignore-scripts
 RUN npm rebuild bcrypt --build-from-source
-RUN npm install sqlite3 mysql
+RUN npm install @vscode/sqlite3 mysql
 
 COPY client/package-lock.json client/package.json /codebase/client/
 RUN cd ./client && npm ci --ignore-scripts
