--- a/registry/package.json
+++ b/registry/package.json
@@ -78,7 +78,7 @@
         "query-string": "^7.0.0",
         "serve-static": "^1.14.1",
         "source-map-support": "^0.5.19",
-        "sqlite3": "^5.0.2",
+        "@vscode/sqlite3": "^5.0.7",
         "url-join": "^4.0.1",
         "uuid": "^3.4.0"
     }
